--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,6 +25,7 @@ jobs:
           RUST_BACKTRACE=full cargo build --verbose
           mkdir -p rust-playground-api/rust-playground-api
           cp target/debug/main rust-playground-api/rust-playground-api/rust-playground-api
+          cp asm.sh build.sh run.sh test.sh wasm.sh rust-playground-api/rust-playground-api/
           chmod 755 rust-playground-api/rust-playground-api/rust-playground-api
 
       - name: rust-playground-api-debug-linux-x86_64
@@ -47,6 +48,7 @@ jobs:
           RUST_BACKTRACE=full cargo build --release --verbose
           mkdir -p rust-playground-api/rust-playground-api
           cp target/release/main rust-playground-api/rust-playground-api/rust-playground-api
+          cp asm.sh build.sh run.sh test.sh wasm.sh rust-playground-api/rust-playground-api/
           strip -s rust-playground-api/rust-playground-api/rust-playground-api
           chmod 755 rust-playground-api/rust-playground-api/rust-playground-api
 
