Add GitHub Gist input support.
For example:
  GET /?id={gist_id}

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ debug-linux-x86_64:
     - RUST_BACKTRACE=full cargo build --verbose
     - mkdir -p rust-playground-api
     - cp target/debug/main rust-playground-api/rust-playground-api
-    - cp asm.sh build.sh run.sh test.sh wasm.sh rust-playground-api/
+    - cp gist.sh asm-gist.sh build-gist.sh run-gist.sh test-gist.sh wasm-gist.sh rust-playground-api/
     - chmod 755 rust-playground-api/rust-playground-api
   artifacts:
     name: rust-playground-api-debug-linux-x86_64
@@ -60,7 +60,7 @@ release-linux-x86_64:
     - RUST_BACKTRACE=full cargo build --release --verbose
     - mkdir -p rust-playground-api
     - cp target/release/main rust-playground-api/rust-playground-api
-    - cp asm.sh build.sh run.sh test.sh wasm.sh rust-playground-api/
+    - cp gist.sh asm-gist.sh build-gist.sh run-gist.sh test-gist.sh wasm-gist.sh rust-playground-api/
     - strip -s rust-playground-api/rust-playground-api
     - chmod 755 rust-playground-api/rust-playground-api
   artifacts:
